--- a/style.css
+++ b/style.css
@@ -1,15 +1,6 @@
-body {
-    background-color: #f0f0f0;
-    font-family: Arial, sans-serif;
-    text-align: center;
-    margin-top: 50px;
-  }
-  
-  h1 {
-    color: #333;
-  }
-  
-  p {
-    color: #555;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
   }
   
